# AGENTDUALALL1

./: README.md  index.html  metadata.json
backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/.github/workflows/: ci-cd.yml
backend/migrations/: 20260622214327_init.sql
backend/src/: db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
backend/tests/: integration_tests.rs
src/: App.tsx  index.css
