[package]
name = "agent_duel_backend"
version = "1.0.0"
edition = "2021"
authors = ["Veklom Dev Team <dev@veklom.com>"]
description = "High-performance Base Network dApp Game Backend with SQLx, Axum, anyhow, and tracing"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "migrate"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
rand = "0.8.5"
hex = "0.4.3"

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
